[workspace]
members = [
    "halborn-near-ctf",
    "halborn-near-ctf-associated-contract",
    "halborn-near-ctf-staking",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
near-sdk = { version = "5.1.0", features = ["unit-testing"] }
near-contract-standards = "5.1.0"

